added extra training to the primary model

--- a/Behavioral_Cloning.ipynb
+++ b/Behavioral_Cloning.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -709,38 +709,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "407/407 [==============================] - 91s 223ms/step - loss: 0.0275 - val_loss: 0.0248\n",
-      "Epoch 2/10\n",
-      "407/407 [==============================] - 48s 117ms/step - loss: 0.0248 - val_loss: 0.0238\n",
-      "Epoch 3/10\n",
-      "407/407 [==============================] - 48s 117ms/step - loss: 0.0241 - val_loss: 0.0241\n",
-      "Epoch 4/10\n",
-      "407/407 [==============================] - 48s 117ms/step - loss: 0.0237 - val_loss: 0.0237\n",
-      "Epoch 5/10\n",
-      "407/407 [==============================] - 48s 117ms/step - loss: 0.0234 - val_loss: 0.0237\n",
-      "Epoch 6/10\n",
-      "407/407 [==============================] - 47s 117ms/step - loss: 0.0230 - val_loss: 0.0234\n",
-      "Epoch 7/10\n",
-      "407/407 [==============================] - 47s 117ms/step - loss: 0.0226 - val_loss: 0.0235\n",
-      "Epoch 8/10\n",
-      "407/407 [==============================] - 47s 117ms/step - loss: 0.0221 - val_loss: 0.0235\n",
-      "Epoch 9/10\n",
-      "407/407 [==============================] - 47s 117ms/step - loss: 0.0218 - val_loss: 0.0234\n",
-      "Epoch 10/10\n",
-      "407/407 [==============================] - 48s 117ms/step - loss: 0.0210 - val_loss: 0.0234\n"
+      "Epoch 1/20\n",
+      "407/407 [==============================] - 48s 118ms/step - loss: 0.0271 - val_loss: 0.0255\n",
+      "Epoch 2/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0245 - val_loss: 0.0240\n",
+      "Epoch 3/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0242 - val_loss: 0.0240\n",
+      "Epoch 4/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0238 - val_loss: 0.0239\n",
+      "Epoch 5/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0235 - val_loss: 0.0236\n",
+      "Epoch 6/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0231 - val_loss: 0.0234\n",
+      "Epoch 7/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0226 - val_loss: 0.0233\n",
+      "Epoch 8/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0223 - val_loss: 0.0235\n",
+      "Epoch 9/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0219 - val_loss: 0.0233\n",
+      "Epoch 10/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0214 - val_loss: 0.0232\n",
+      "Epoch 11/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0212 - val_loss: 0.0231\n",
+      "Epoch 12/20\n",
+      "407/407 [==============================] - 47s 115ms/step - loss: 0.0203 - val_loss: 0.0229\n",
+      "Epoch 13/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0199 - val_loss: 0.0227\n",
+      "Epoch 14/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0192 - val_loss: 0.0228\n",
+      "Epoch 15/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0184 - val_loss: 0.0243\n",
+      "Epoch 16/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0178 - val_loss: 0.0231\n",
+      "Epoch 17/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0171 - val_loss: 0.0225\n",
+      "Epoch 18/20\n",
+      "407/407 [==============================] - 48s 117ms/step - loss: 0.0163 - val_loss: 0.0225\n",
+      "Epoch 19/20\n",
+      "407/407 [==============================] - 47s 117ms/step - loss: 0.0156 - val_loss: 0.0230\n",
+      "Epoch 20/20\n",
+      "407/407 [==============================] - 47s 116ms/step - loss: 0.0152 - val_loss: 0.0230\n"
      ]
     }
    ],
    "source": [
     "batch_size = 32\n",
     "\n",
-    "model = train_model(model, X_train_files, y_train, img_dir, X_val, y_val)"
+    "model = train_model(model, X_train_files, y_train, img_dir, X_val, y_val, epochs=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -750,7 +770,7 @@
      "output_type": "stream",
      "text": [
       "1866/1866 [==============================] - 2s 1ms/step\n",
-      "test loss: 0.021728\n"
+      "test loss: 0.021310\n"
      ]
     }
    ],
@@ -761,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -788,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -820,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -831,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -841,25 +861,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "19/19 [==============================] - 6s 338ms/step - loss: 0.0356 - val_loss: 0.0244\n",
+      "19/19 [==============================] - 6s 342ms/step - loss: 0.0452 - val_loss: 0.0248\n",
       "Epoch 2/10\n",
-      "19/19 [==============================] - 6s 318ms/step - loss: 0.0331 - val_loss: 0.0245\n",
+      "19/19 [==============================] - 6s 315ms/step - loss: 0.0361 - val_loss: 0.0243\n",
       "Epoch 3/10\n",
-      "19/19 [==============================] - 6s 317ms/step - loss: 0.0326 - val_loss: 0.0245\n",
+      "19/19 [==============================] - 6s 315ms/step - loss: 0.0322 - val_loss: 0.0247\n",
       "Epoch 4/10\n",
-      "19/19 [==============================] - 6s 318ms/step - loss: 0.0293 - val_loss: 0.0248\n",
+      "19/19 [==============================] - 6s 311ms/step - loss: 0.0326 - val_loss: 0.0243\n",
       "Epoch 5/10\n",
-      "19/19 [==============================] - 6s 318ms/step - loss: 0.0305 - val_loss: 0.0252\n",
+      "19/19 [==============================] - 6s 312ms/step - loss: 0.0286 - val_loss: 0.0245\n",
       "Epoch 6/10\n",
-      "19/19 [==============================] - 6s 317ms/step - loss: 0.0293 - val_loss: 0.0252\n",
+      "19/19 [==============================] - 6s 316ms/step - loss: 0.0262 - val_loss: 0.0252\n",
       "Epoch 7/10\n",
-      "19/19 [==============================] - 6s 319ms/step - loss: 0.0293 - val_loss: 0.0256\n",
+      "19/19 [==============================] - 6s 314ms/step - loss: 0.0234 - val_loss: 0.0247\n",
       "Epoch 8/10\n",
-      "19/19 [==============================] - 6s 319ms/step - loss: 0.0261 - val_loss: 0.0256\n",
+      "19/19 [==============================] - 6s 314ms/step - loss: 0.0229 - val_loss: 0.0257\n",
       "Epoch 9/10\n",
-      "19/19 [==============================] - 6s 320ms/step - loss: 0.0270 - val_loss: 0.0256\n",
+      "19/19 [==============================] - 6s 316ms/step - loss: 0.0226 - val_loss: 0.0254\n",
       "Epoch 10/10\n",
-      "19/19 [==============================] - 6s 320ms/step - loss: 0.0228 - val_loss: 0.0262\n"
+      "19/19 [==============================] - 6s 316ms/step - loss: 0.0223 - val_loss: 0.0274\n"
      ]
     }
    ],
@@ -870,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -880,7 +900,7 @@
      "output_type": "stream",
      "text": [
       "1866/1866 [==============================] - 2s 1ms/step\n",
-      "test loss: 0.021728\n"
+      "test loss: 0.021310\n"
      ]
     }
    ],
@@ -891,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
